[package]
name = "json-stream"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.57", features = ["serde-serialize"] }
serde_json = "1.0.44"
web-sys = { version = "0.3.34", features = ['console'] }
# serde_derive = "1.0.104"
# serde = "1.0.104"
